Bug 1392606 - Fix MIPS64 simulator build compilation failures. r=bbouvier